plugins {
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'org.jetbrains.kotlin.jvm' version '1.9.22'
    id 'java'
}

jar {
    manifest.attributes(
            'Main-Class': 'com.sidpatchy.clairebot.Main',
            'Multi-Release': 'true'
    )
}

group 'com.sidpatchy'
version '3.3.0'

sourceCompatibility = 17
targetCompatibility = 17

repositories {
    mavenCentral()
    maven { url 'https://m2.dv8tion.net/releases' }
    maven { url 'https://jitpack.io' }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'

    implementation 'com.github.Sidpatchy:Robin:2.0.0'

    implementation 'org.javacord:javacord:3.8.0'

    implementation 'org.apache.logging.log4j:log4j-api:2.22.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.22.1'
    implementation 'org.apache.commons:commons-lang3:3.14.0'

    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.22'

    implementation 'org.yaml:snakeyaml:2.0'
    implementation 'org.json:json:20231013'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.16.1'

}

test {
    useJUnitPlatform()
}

compileKotlin {
    kotlinOptions {
        jvmTarget = "11"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "11"
    }
}